--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8.9)
-set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 project(fam)
+
+#set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
 add_subdirectory (src)
 add_subdirectory (examples)
