--- a/fam.xcodeproj/xcshareddata/xcschemes/fuzzy.xcscheme
+++ b/fam.xcodeproj/xcshareddata/xcschemes/fuzzy.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0620"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -59,6 +59,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "830518F217C8038D004DC675"
+            BuildableName = "libfuzzy.dylib"
+            BlueprintName = "fuzzy"
+            ReferencedContainer = "container:fam.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
